- new commands for easy access - documentation

--- a/files/config.json
+++ b/files/config.json
@@ -12,7 +12,7 @@
     "hashtag_min_length": 3,
     "tweet_max_length": 280,
     "tweet_start_string": "Highlights aus dem Stream heute: ",
-    "tweet_end_string": " Danke das ihr dabei wart."
+    "tweet_end_string": "Danke, dass ihr heute da wart."
   },
   "discord":
   {
