--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -1,4 +1,4 @@
-name: Pylint/Unittest
+name: Pylint
 
 on: [pull_request]
 
@@ -24,6 +24,3 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
-    - name: Test code with pytest
-      run: |
-        pytest
