start hashtag bot automatically only if it is configured

--- a/files/config.json
+++ b/files/config.json
@@ -9,6 +9,7 @@
   },
   "bot":
   {
+    "start_bot_at_streamstart": true,
     "start_bot_command":"starthash",
     "finish_bot_command":"finishhash",
     "stop_bot_command":"stophash",
