--- a/files/config.json
+++ b/files/config.json
@@ -24,7 +24,8 @@
     "tweet_max_length": 280,
     "tweet_start_string": "Highlights aus dem Stream heute: ",
     "tweet_end_string": "Danke, dass ihr heute da wart.",
-    "hashtag_all_lower_case": false
+    "hashtag_all_lower_case": false,
+    "hashtag_authentification_level": "SUBSCRIBER"
   },
   "discord":
   {
