restructure env verification with dotenv

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "envFile": "D:/Workspace/git/TeTueSecrets/TwitchHashtagBot/.env.development"
         },
         {
-            "name": "Test",
+            "name": "test",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/source/test.py",
