new file handling with json and creation of a new cache file if no exist

--- a/files/template.env
+++ b/files/template.env
@@ -10,6 +10,7 @@ DC_USER_NAME_CLIP=
 DC_WEBHOOK_URL_CLIP=
 DC_FEATURE_HASHTAG=
 DC_FEATURE_CLIPS=
+CLIP_THANK_YOU_TEXT=
 
 START_BOT_AT_STREAMSTART=
 FINISH_BOT_AT_STREAMEND=
