--- a/files/template.env
+++ b/files/template.env
@@ -10,15 +10,16 @@ DC_USER_NAME_CLIP=
 DC_WEBHOOK_URL_CLIP=
 DC_FEATURE_HASHTAG=
 DC_FEATURE_CLIPS=
-CLIP_THANK_YOU_TEXT=
+CLIPS_FETCH_TIME=
+DEFAULT_CLIP_THANK_YOU_TEXT=
 
 START_BOT_AT_STREAMSTART=
 FINISH_BOT_AT_STREAMEND=
 HASHTAG_MAX_LENGTH=
 HASHTAG_MIN_LENGTH=
 TWEET_MAX_LENGTH=
-TWEET_START_STRING_START_STRING=
-TWEET_END_STRING_END_STRING=
+TWEET_START_STRING=
+TWEET_END_STRING=
 HASHTAG_ALL_LOWER_CASE=
 HASHTAG_AUTHENTICATION_LEVEL=
 
