configuration via env also available for check stream interval

--- a/files/template.env
+++ b/files/template.env
@@ -3,6 +3,7 @@ TW_TOKEN=
 TW_NICKNAME=
 TW_INIT_CHANNELS=
 TW_BROADCASTER_ID=
+CHECK_STREAM_INTERVAL=
 
 DC_USER_NAME_HASHTAG=
 DC_WEBHOOK_URL_HASHTAG=
