init new feature and add missing configuration for user

--- a/files/template.env
+++ b/files/template.env
@@ -6,6 +6,7 @@ TW_BROADCASTER_ID=
 CHECK_STREAM_INTERVAL=
 START_BOT_AT_STREAMSTART=
 FINISH_BOT_AT_STREAMEND=
+LOG_LEVEL=
 
 DC_FEATURE_HASHTAG=
 DC_USER_NAME_HASHTAG=
