rework configuration for banned hashtag command

--- a/files/template.env
+++ b/files/template.env
@@ -30,3 +30,4 @@ BOT_HASHTAG_COMMAND_FINISH=
 BOT_HASHTAG_COMMAND_STOP=
 BOT_HASHTAG_COMMAND_HELP=
 BOT_HASHTAG_COMMAND_STATUS=
+BOT_HASHTAG_COMMAND_BANN=
