rename old , add configs for new function

--- a/files/template.env
+++ b/files/template.env
@@ -6,6 +6,8 @@ TW_BROADCASTER_ID=
 CHECK_STREAM_INTERVAL=
 START_BOT_AT_STREAMSTART=
 FINISH_BOT_AT_STREAMEND=
+DC_FEATURE_MESSAGE_STREAMSTART=
+DC_FEATURE_MESSAGE_STREAMSTART_TEXT=
 LOG_LEVEL=
 
 DC_FEATURE_HASHTAG=
@@ -23,7 +25,7 @@ DC_FEATURE_CLIPS=
 DC_USER_NAME_CLIP=
 DC_WEBHOOK_URL_CLIP=
 CLIPS_FETCH_TIME=
-DEFAULT_CLIP_THANK_YOU_TEXT=
+CLIP_THANK_YOU_TEXT=
 
 BOT_HASHTAG_COMMAND_START=
 BOT_HASHTAG_COMMAND_FINISH=
