- add chatter name to app data - create a setting to customize the thank you text for hashtag post - delete not further necessary option and setting

--- a/files/template.env
+++ b/files/template.env
@@ -14,8 +14,7 @@ DC_WEBHOOK_URL_HASHTAG=
 HASHTAG_MAX_LENGTH=
 HASHTAG_MIN_LENGTH=
 TWEET_MAX_LENGTH=
-TWEET_START_STRING=
-TWEET_END_STRING=
+HASHTAG_CHATTER_THANKS_TEXT=
 HASHTAG_ALL_LOWER_CASE=
 HASHTAG_AUTHENTICATION_LEVEL=
 
