--- a/files/template.env
+++ b/files/template.env
@@ -29,6 +29,7 @@ DC_FEATURE_MESSAGE_STREAMSTART=
 DC_USER_NAME_MESSAGE_STREAMSTART=
 DC_WEBHOOK_URL_MESSAGE_STREAMSTART=
 DC_FEATURE_MESSAGE_STREAMSTART_TEXT=
+STREAM_START_TIME_DIFFERENCE=
 
 BOT_HASHTAG_COMMAND_START=
 BOT_HASHTAG_COMMAND_FINISH=
