--- a/files/template.env
+++ b/files/template.env
@@ -37,3 +37,6 @@ BOT_HASHTAG_COMMAND_STOP=
 BOT_HASHTAG_COMMAND_HELP=
 BOT_HASHTAG_COMMAND_STATUS=
 BOT_HASHTAG_COMMAND_BANN=
+
+YT_TOKEN=
+YT_CHANNEL_ID=
